--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<title>Hello World</title>
-	<body>
-		<h1>bonjour le monde</h1>
-		<h2>comment ça va</h2>
-	</body>
+<!DOCTYPE html>
+<html lang="fr">
+	<title>Hello World</title>
+		<body>
+			<h1>bonjour le monde</h1>
+			<h2>comment ça va</h2>
+		</body>
+	</html>
